# GUIRecorderQML

./: CMakeLists.txt
src/: qtquickcontrols2.conf
src/externalLibs/API/: IGUIRecorderCore.cpp  IGUIRecorderCore.h  IGUIRecorderReportGen.cpp  IGUIRecorderReportGen.h  IParentInfo.h  IPlayer.h  IRecorder.h  IScenario.h  IStep.h
src/include/: DllLoader.h  InitExtendLibs.h  StepInfo.h  StepsModelsController.h
src/include/StepsModel/: StepInfo.h
src/include/TemplateModel/: TemplateInfo.h  TemplatesModelsController.h
src/js/: qmlFooterLog.js
src/qml/: ExtendFooter.qml  FooterOutput.qml  MainMenuBar.qml  main.qml
src/qml/content/RecorderTab/: LogOutput.qml  RecorderTab.qml
src/qml/content/RecorderTab/TreeViewStepsList/: TreeViewStepsList.qml
src/qml/content/ViewTab/: ImageViewer.qml  TreeViewTemplate.qml  ViewTab.qml
src/qml/content/ViewTab/TreeViewStepsList/: TreeDelegate.qml  TreeViewStepsList.qml
src/source/: InitExtendLibs.cpp  main.cpp
src/source/StepsModel/: StepInfo.cpp  StepsModelsController.cpp
src/source/TemplateModel/: TemplateInfo.cpp  TemplatesModelsController.cpp
src/source/TreeModel/: StepInfo.cpp  StepsModelsController.cpp
